fix buy button align cemter

--- a/src/extra/buy.less
+++ b/src/extra/buy.less
@@ -7,7 +7,7 @@
 		position: absolute;
 		width: 642px;
 		height: auto;
-		padding-bottom: 17px;
+		padding: 10px 10px 17px 10px;
 
 		display: flex;
 		flex-direction: column;
@@ -22,12 +22,15 @@
 		.grid {
 			width: 642px;
 			height: auto;
-			display: grid;
-			grid-template-columns: 33% 33% 33%;
 			padding: 10px 10px;
 
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			justify-content: center;
+
 			.buy-box {
-				width: 100%;
+				width: 642px/3;
 				box-sizing: border-box;
 
 				display: flex;
@@ -138,6 +141,7 @@
 				grid-template-columns: 100%;
 
 				.buy-box {
+					width: 100%;
 					& > div {
 						width: 350px;
 						height: 100px;
